# cookiecutter-tutor-plugin

./: README.md  cookiecutter.json
{{ cookiecutter.package_name }}/: README.md  pyproject.toml
